# C-War-Chronicles-Humans-vs-Orcs

./: CMakeLists.txt  README.md  main.c
Files/: savas_sim.txt
